# amazon-analyzer

./: .env  main.py  pyproject.toml
src/: db.py  oxylabs_client.py
